--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2024"
 inkwell = { version = "0.4.0", features = ["llvm15-0"] }
 libc = "0.2.176"
 once_cell = "1.19"
+
+[build-dependencies]
+cc = "1.0"
+
