--- a/wpp-cli/Cargo.toml
+++ b/wpp-cli/Cargo.toml
@@ -8,4 +8,8 @@ license = "MIT"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 colored = "2.1"
+regex = "1"
 wpp-v2 = { path = "../wpp-v2" }
+inkwell = { version = "0.4.0", features = ["llvm15-0"] }
+[build-dependencies]
+cc = "1.0"
