--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -3,6 +3,15 @@ name = "wpp-v2"
 version = "2.0.0-beta"
 edition = "2024"
 
+[lib]
+name = "wpp_v2"
+path = "src/lib.rs"
+crate-type = ["rlib", "staticlib"]
+
+[[bin]]
+name = "wpp-v2"
+path = "src/main.rs"
+
 [dependencies]
 inkwell = { version = "0.4.0", features = ["llvm15-0"] }
 libc = "0.2.176"
