--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,11 +1,11 @@
-name: 🪟 Build W++ LLVM CLI (Windows)
+name: 🪟 Build W++ LLVM CLI (Windows, Full LLVM)
 
 on:
   workflow_dispatch:
 
 jobs:
   build-windows:
-    name: Build W++ for Windows
+    name: Build W++ with Full LLVM
     runs-on: windows-latest
 
     steps:
@@ -30,9 +30,9 @@ jobs:
             C:\llvm-src
             C:\llvm-build
             C:\LLVM
-          key: llvm15-msvc-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          key: llvm15-full-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: 🧩 Build LLVM from source
+      - name: 🧩 Build Full LLVM from source
         shell: pwsh
         run: |
           $srcDir = "C:\llvm-src"
@@ -47,31 +47,37 @@ jobs:
               Write-Host "📦 LLVM source already cached."
             }
 
-            Write-Host "🛠️ Configuring LLVM with CMake (MSVC toolchain)..."
+            Write-Host "🛠️ Configuring LLVM with full dependency tree enabled..."
             cmake -S "$srcDir\llvm" -B $buildDir `
               -G "Ninja" `
               -DCMAKE_BUILD_TYPE=Release `
               -DCMAKE_INSTALL_PREFIX=$installDir `
               -DCMAKE_C_COMPILER="cl.exe" `
               -DCMAKE_CXX_COMPILER="cl.exe" `
-              -DLLVM_ENABLE_PROJECTS="clang;lld;clang-tools-extra" `
-              -DLLVM_TARGETS_TO_BUILD="X86;AArch64" `
+              -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld;lldb;mlir;polly;openmp" `
+              -DLLVM_TARGETS_TO_BUILD="all" `
               -DLLVM_BUILD_TOOLS=ON `
-              -DLLVM_INCLUDE_TESTS=OFF `
-              -DLLVM_INCLUDE_DOCS=OFF `
-              -DLLVM_INCLUDE_EXAMPLES=OFF `
-              -DLLVM_ENABLE_TERMINFO=OFF `
-              -DLLVM_ENABLE_LIBXML2=OFF `
+              -DLLVM_INCLUDE_BENCHMARKS=ON `
+              -DLLVM_INCLUDE_DOCS=ON `
+              -DLLVM_INCLUDE_EXAMPLES=ON `
+              -DLLVM_INCLUDE_TESTS=ON `
+              -DLLVM_ENABLE_RTTI=ON `
+              -DLLVM_ENABLE_EH=ON `
+              -DLLVM_ENABLE_ASSERTIONS=ON `
+              -DLLVM_ENABLE_LIBXML2=ON `
+              -DLLVM_ENABLE_TERMINFO=ON `
               -DLLVM_ENABLE_ZLIB=ON `
-              -DLLVM_ENABLE_ASSERTIONS=OFF
+              -DLLVM_ENABLE_BINDINGS=ON `
+              -DLLVM_USE_CRT_RELEASE=MT `
+              -DPYTHON_EXECUTABLE="C:\Python311\python.exe"
 
-            Write-Host "⚙️ Building LLVM (may take 30–90 minutes)..."
+            Write-Host "⚙️ Building full LLVM toolchain (this may take 2–3 hours)..."
             cmake --build $buildDir --target install --config Release
           } else {
             Write-Host "✅ Using cached LLVM build."
           }
 
-          # === llvm-config.exe detection ===
+          # === llvm-config detection ===
           $llvmConfig = "$installDir\bin\llvm-config.exe"
           if (!(Test-Path $llvmConfig)) {
             Write-Host "⚠️ llvm-config.exe not found. Searching recursively..."
@@ -88,12 +94,15 @@ jobs:
           Write-Host "🔍 llvm-config version check:"
           & $llvmConfig --version
 
+          # Export environment vars
           "LLVM_SYS_150_PREFIX=$installDir" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           "LLVM_CONFIG_PATH=$llvmConfig" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
           "$installDir\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: ⚙️ Build W++ for Windows
-        run: cargo build --release -p wpp-cli --target x86_64-pc-windows-msvc
+        shell: pwsh
+        run: |
+          cargo build --release -p wpp-cli --target x86_64-pc-windows-msvc
 
       - name: 📦 Package binary
         shell: pwsh
