--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -35,69 +35,55 @@ jobs:
       - name: 🧩 Build Full LLVM from source
         shell: pwsh
         run: |
-          $srcDir = "C:\llvm-src"
-          $buildDir = "C:\llvm-build"
-          $installDir = "C:\LLVM"
+              $ErrorActionPreference = "Stop"
+              $srcDir = "C:\llvm-src"
+              $buildDir = "C:\llvm-build"
+              $installDir = "C:\LLVM"
 
-          if (!(Test-Path "$installDir\bin\llvm-config.exe")) {
-            Write-Host "⬇️ Cloning LLVM 15.0.7 source..."
-            if (!(Test-Path $srcDir)) {
-              git clone https://github.com/llvm/llvm-project.git $srcDir --branch llvmorg-15.0.7 --depth 1
-            } else {
-              Write-Host "📦 LLVM source already cached."
-            }
+              if (!(Test-Path "$installDir\bin\llvm-config.exe")) {
+                Write-Host "⬇️ Cloning LLVM 15.0.7 source..."
+                if (!(Test-Path $srcDir)) {
+                  git clone https://github.com/llvm/llvm-project.git $srcDir --branch llvmorg-15.0.7 --depth 1
+                } else {
+                  Write-Host "📦 LLVM source already cached."
+                }
 
-            Write-Host "🛠️ Configuring LLVM with full dependency tree enabled..."
-            cmake -S "$srcDir\llvm" -B $buildDir `
-              -G "Ninja" `
-              -DCMAKE_BUILD_TYPE=Release `
-              -DCMAKE_INSTALL_PREFIX=$installDir `
-              -DCMAKE_C_COMPILER="cl.exe" `
-              -DCMAKE_CXX_COMPILER="cl.exe" `
-              -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld;lldb;mlir;polly;openmp" `
-              -DLLVM_TARGETS_TO_BUILD="all" `
-              -DLLVM_BUILD_TOOLS=ON `
-              -DLLVM_INCLUDE_BENCHMARKS=ON `
-              -DLLVM_INCLUDE_DOCS=ON `
-              -DLLVM_INCLUDE_EXAMPLES=ON `
-              -DLLVM_INCLUDE_TESTS=ON `
-              -DLLVM_ENABLE_RTTI=ON `
-              -DLLVM_ENABLE_EH=ON `
-              -DLLVM_ENABLE_ASSERTIONS=ON `
-              -DLLVM_ENABLE_LIBXML2=ON `
-              -DLLVM_ENABLE_TERMINFO=ON `
-              -DLLVM_ENABLE_ZLIB=ON `
-              -DLLVM_ENABLE_BINDINGS=ON `
-              -DLLVM_USE_CRT_RELEASE=MT `
-              -DPYTHON_EXECUTABLE="C:\Python311\python.exe"
+                Write-Host "🛠️ Configuring LLVM with full dependency tree enabled..."
+                cmake -S "$srcDir\llvm" -B $buildDir `
+                  -G "Ninja" `
+                  -DCMAKE_BUILD_TYPE=Release `
+                  -DCMAKE_INSTALL_PREFIX=$installDir `
+                  -DCMAKE_C_COMPILER="cl.exe" `
+                  -DCMAKE_CXX_COMPILER="cl.exe" `
+                  -DLLVM_ENABLE_PROJECTS="clang;clang-tools-extra;lld;lldb;mlir;polly;openmp" `
+                  -DLLVM_TARGETS_TO_BUILD="all" `
+                  -DLLVM_BUILD_TOOLS=ON `
+                  -DLLVM_INCLUDE_BENCHMARKS=ON `
+                  -DLLVM_INCLUDE_DOCS=OFF `
+                  -DLLVM_INCLUDE_EXAMPLES=ON `
+                  -DLLVM_INCLUDE_TESTS=OFF `
+                  -DLLVM_ENABLE_RTTI=ON `
+                  -DLLVM_ENABLE_EH=ON `
+                  -DLLVM_ENABLE_ASSERTIONS=ON `
+                  -DLLVM_ENABLE_LIBXML2=ON `
+                  -DLLVM_ENABLE_TERMINFO=ON `
+                  -DLLVM_ENABLE_ZLIB=ON `
+                  -DLLVM_ENABLE_BINDINGS=ON `
+                  -DLLVM_USE_CRT_RELEASE=MT `
+                  -DPYTHON_EXECUTABLE="C:\Python311\python.exe" `
+                  2>&1 | Tee-Object -FilePath cmake_configure.log
 
-            Write-Host "⚙️ Building full LLVM toolchain (this may take 2–3 hours)..."
-            cmake --build $buildDir --target install --config Release
-          } else {
-            Write-Host "✅ Using cached LLVM build."
-          }
+                if (!(Test-Path "$buildDir\build.ninja")) {
+                  Write-Host "❌ CMake configuration failed. Dumping first 50 lines of cmake_configure.log..."
+                  Get-Content cmake_configure.log -TotalCount 50
+                  exit 1
+                }
 
-          # === llvm-config detection ===
-          $llvmConfig = "$installDir\bin\llvm-config.exe"
-          if (!(Test-Path $llvmConfig)) {
-            Write-Host "⚠️ llvm-config.exe not found. Searching recursively..."
-            $found = Get-ChildItem -Path $installDir -Recurse -Filter "llvm-config.exe" -ErrorAction SilentlyContinue | Select-Object -First 1
-            if ($found) {
-              Write-Host "✅ Found llvm-config.exe at $($found.FullName)"
-              $llvmConfig = $found.FullName
-            } else {
-              Write-Host "❌ llvm-config.exe missing entirely — aborting build."
-              exit 1
-            }
-          }
-
-          Write-Host "🔍 llvm-config version check:"
-          & $llvmConfig --version
-
-          # Export environment vars
-          "LLVM_SYS_150_PREFIX=$installDir" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          "LLVM_CONFIG_PATH=$llvmConfig" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-          "$installDir\bin" | Out-File -FilePath $Env:GITHUB_PATH -Encoding utf8 -Append
+                Write-Host "⚙️ Building LLVM (this will take ~2–3h)..."
+                cmake --build $buildDir --target install --config Release
+              } else {
+                Write-Host "✅ Using cached LLVM build."
+              }
 
       - name: ⚙️ Build W++ for Windows
         shell: pwsh
