--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -17,15 +17,13 @@ jobs:
           setx CMAKE_GENERATOR_PLATFORM x64
           setx CMAKE_SH "CMAKE_SH-NOTFOUND"
 
-      - name: 🦀 Install Rust (Native Windows)
+      - name: 🦀 Verify Rust installation
         shell: powershell
         run: |
-          Write-Host "⬇️ Installing Rust for Windows..."
-          Invoke-WebRequest https://static.rust-lang.org/rustup/init.exe -OutFile rustup-init.exe
-          Start-Process -Wait -FilePath .\rustup-init.exe -ArgumentList "-y --default-toolchain stable --default-host x86_64-pc-windows-msvc"
-          refreshenv
+          Write-Host "🔍 Checking existing Rust installation..."
           rustc --version
           cargo --version
+
 
 
       - name: 💾 Restore LLVM build cache
