fixed cmake errors in self hosted windows runner

--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -53,6 +53,19 @@ jobs:
           }
           & cl.exe /? | Out-Null
           Write-Host "MSVC toolchain ready"
+      - name: Ensure CMake is on PATH
+        shell: powershell
+        run: |
+          Write-Host "Adding CMake to PATH..."
+          $cmakePath = "${env:ProgramFiles}\CMake\bin"
+          if (!(Test-Path $cmakePath)) {
+            Write-Error "CMake not found in $cmakePath. Please verify installation."
+            exit 1
+          }
+          $env:PATH = "$cmakePath;$env:PATH"
+          [Environment]::SetEnvironmentVariable("PATH", $env:PATH, [EnvironmentVariableTarget]::Process)
+          Write-Host "CMake path added. Version info:"
+          & cmake --version
 
       - name: Build LLVM 15 from source
         shell: powershell
