--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.19"
 tokio = { version = "1", features = ["full"] }
 url = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+rand = "0.8"
 [build-dependencies]
 cc = "1.0"
 
