--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1", features = ["full"] }
 url = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rand = "0.8"
+unicode-normalization = "0.1"
 [build-dependencies]
 cc = "1.0"
 
