--- a/wpp-cli/Cargo.toml
+++ b/wpp-cli/Cargo.toml
@@ -11,5 +11,16 @@ colored = "2.1"
 regex = "1"
 wpp-v2 = { path = "../wpp-v2" }
 inkwell = { version = "0.4.0", features = ["llvm15-0"] }
+reqwest = { version = "0.11", features = ["json", "multipart", "stream", "blocking", "gzip"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1", features = ["full"] }
+rpassword = "7.4.0"
+dirs = "5"
+walkdir = "2"
+indicatif = "0.17"
+sha2 = "0.10"
+rayon = "1.10"
+lazy_static = "1.4"
 [build-dependencies]
 cc = "1.0"
