--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -21,6 +21,7 @@ url = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rand = "0.8"
 unicode-normalization = "0.1"
+rayon = "1.10"
 [build-dependencies]
 cc = "1.0"
 
