--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -2,6 +2,9 @@
 name = "wpp-v2"
 version = "2.0.0-beta"
 edition = "2024"
+[features]
+default = []
+rust_modules = []
 
 [lib]
 name = "wpp_v2"
@@ -22,6 +25,7 @@ reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rand = "0.8"
 unicode-normalization = "0.1"
 rayon = "1.10"
+libloading = "0.8"
 [build-dependencies]
 cc = "1.0"
 
