fixed crticial bugs in the threadGC

--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 [features]
 default = []
 rust_modules = []
+thread-debug = []  # Enable verbose thread system debugging
 
 [lib]
 name = "wpp_v2"
