--- a/wpp-v2/Cargo.toml
+++ b/wpp-v2/Cargo.toml
@@ -21,6 +21,8 @@ inkwell = { version = "0.4.0", features = ["llvm15-0"] }
 libc = "0.2.176"
 once_cell = "1.19"
 tokio = { version = "1", features = ["full"] }
+httparse = "1.8"
+dashmap = "6.0"
 url = "2"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 rand = "0.8"
